--- a/index.html
+++ b/index.html
@@ -339,8 +339,8 @@
 
             <div class="row text-kryp" style="margin-top: -350px;">
                 <div class="center" style="position:fixed;">
-                    <h1 class="uppercase">Kryptos <br/><br/>
-                        <span>KRYPTOS garantiza la seguridad e integridad de la información en aplicaciones y soluciones del mundo digital .</span>
+                    <h1 class="uppercase"><br/><br/>
+                        <span style=" ">KRYPTOS brinda seguridad e integridad de la información para aplicaciones y soluciones digitales  .</span>
                     </h1>
                     <!-- <img class="responsive-img logo-portada" src="images/logo_blanco.svg"> -->
                     <br>
@@ -384,11 +384,11 @@
         <div class="parallax-container">
             <div class="parallax"><img src="images/hero2.jpg"></div>
             <div class="">
-                <h2  class="uppercase white-text" style="float: right; margin-right: 10px;"><span class="trn">Soluciones tecnologícas de seguridad</span></h2>
+                <h2  class="uppercase white-text" style="float: left; margin-right: 10px;"><span class="trn">Soluciones tecnologícas de seguridad</span></h2>
                 <div class="row" >
                     <div class="offset col m6" style="margin: 10px 0 0 800px; ">
                         <p class="white-text"  >
-                            <span style="float: right;" class="trn">Usamos <a href="/blog"> criptografía simetrica y asimetrica </a>para apoyar que apoye a diferentes industrias a minimizar los riesgos asociados a sus datos, maximizando así su confiabilidad y generación de valor.</span>
+                            <span style="float: left;" class="trn">Usamos <a href="/blog"> criptografía simetrica y asimetrica </a>para apoyar que apoye a diferentes industrias a minimizar los riesgos asociados a sus datos, maximizando así su confiabilidad y generación de valor.</span>
                         </p>
                     </div>
                 </div>
@@ -476,7 +476,7 @@
             <div class="row">
                 <div class="offset-m3 col m6">
                     <p class="white-text">
-                        <span class="trn">Somos una empresa que diseña e implementa estrategias de seguridad integrales, garantizando la gestión segura de información procesos y procedimientos, fundada por expertos en seguridad informática del IPN y del sector empresarial con amplia experiencia nacional e internacional.</span>
+                        <span class="trn" style="font-size: 1.2em;">Somos una empresa que diseña e implementa estrategias de seguridad integrales, garantizando la gestión segura de información procesos y procedimientos, fundada por expertos en seguridad informática del IPN y del sector empresarial con amplia experiencia nacional e internacional.</span>
                     </p>
                 </div>
                 <div class="col s12 m12 l12">
@@ -488,7 +488,7 @@
         <div class="row white">
             <div class="offset-m3 col m6">
                 <h3 class="center-align uppercase">
-                    <span class="trn">Soluciones seguridad informática a través de la generación de aplicativos para empresas e instituciones. Así como soluciones en desarrollo web con protocolos seguridad de ultima generación.</span>
+                    <span class="trn">SOLUCIONES DE SEGURIDAD INFORMÁTICA Y ESQUEMAS DE CIFRADO HIBRIDOS. ASÍ COMO SOLUCIONES EN DESARROLLO WEB CON PROTOCOLOS SEGURIDAD DE ULTIMA GENERACIÓN.</span>
                 </h3>
                 <hr/>
             </div>
